--- a/CSharp/Exams/Exam2Evening220114/VariableLengthCoding/VariableLengthCoding.csproj
+++ b/CSharp/Exams/Exam2Evening220114/VariableLengthCoding/VariableLengthCoding.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D71373EF-721A-4684-AC20-84187ECC066A}</ProjectGuid>
+    <ProjectGuid>{1CD130EE-666F-4272-9A2E-2DE4E74B2A3D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HelpDoge</RootNamespace>
-    <AssemblyName>HelpDoge</AssemblyName>
+    <RootNamespace>VariableLengthCoding</RootNamespace>
+    <AssemblyName>VariableLengthCoding</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HelpDoge.cs" />
+    <Compile Include="VariableLengthCoding.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
