--- a/CSharpOOP/Homeworks/ExtensionsLambdaDelegates2014HW/Students/Students.csproj
+++ b/CSharpOOP/Homeworks/ExtensionsLambdaDelegates2014HW/Students/Students.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Group.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="StudentsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
