ChickenParticle.cs class created

--- a/CSharpOOP/Homeworks/PracticalWorkshopHW/ParticleSystem/ParticleSystem/ParticleSystem.csproj
+++ b/CSharpOOP/Homeworks/PracticalWorkshopHW/ParticleSystem/ParticleSystem/ParticleSystem.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="AdvancedParticleOperator.cs" />
     <Compile Include="ChaoticParticle.cs" />
+    <Compile Include="ChickenParticle.cs" />
     <Compile Include="ConsoleRenderer.cs" />
     <Compile Include="DyingParticle.cs" />
     <Compile Include="Engine.cs" />
