--- a/CSharpOOP/Homeworks/PracticalWorkshopHW/ParticleSystem/ParticleSystem/ParticleSystem.csproj
+++ b/CSharpOOP/Homeworks/PracticalWorkshopHW/ParticleSystem/ParticleSystem/ParticleSystem.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdvancedParticleOperator.cs" />
+    <Compile Include="AttractorRepellerParticleOperator.cs" />
     <Compile Include="ChaoticParticle.cs" />
     <Compile Include="ChickenParticle.cs" />
     <Compile Include="ConsoleRenderer.cs" />
@@ -56,6 +57,7 @@
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleAttractor.cs" />
     <Compile Include="ParticleEmitter.cs" />
+    <Compile Include="ParticleRepeller.cs" />
     <Compile Include="ParticleUpdater.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
