--- a/Databases/Homeworks/EntityFrameworkHW/EntityFrameworkHW/packages/repositories.config
+++ b/Databases/Homeworks/EntityFrameworkHW/EntityFrameworkHW/packages/repositories.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\EntityFrameworkDemo.Client\packages.config" />
   <repository path="..\EntityFrameworkDemo.Data\packages.config" />
+  <repository path="..\Ex01DAOClass\packages.config" />
+  <repository path="..\Ex03CustomersWithOrdersToCanada\packages.config" />
 </repositories>
