Task05-07 solved Task 8 started

--- a/Databases/Homeworks/EntityFrameworkHW/EntityFrameworkHW/packages/repositories.config
+++ b/Databases/Homeworks/EntityFrameworkHW/EntityFrameworkHW/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\EntityFrameworkDemo.Data\packages.config" />
   <repository path="..\Ex01DAOClass\packages.config" />
   <repository path="..\Ex03CustomersWithOrdersToCanada\packages.config" />
+  <repository path="..\Ex07Conflicts\packages.config" />
 </repositories>
