--- a/Databases/Homeworks/EntityFrameworkHW/EntityFrameworkHW/Ex07Conflicts/Ex07Conflicts.csproj
+++ b/Databases/Homeworks/EntityFrameworkHW/EntityFrameworkHW/Ex07Conflicts/Ex07Conflicts.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9975BA40-E3E7-4314-8310-69007F030013}</ProjectGuid>
+    <ProjectGuid>{61B7F94D-CAA4-43B3-86F0-52E5407676E9}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Ex03CustomersWithOrdersToCanada</RootNamespace>
-    <AssemblyName>Ex03CustomersWithOrdersToCanada</AssemblyName>
+    <RootNamespace>Ex07Conflicts</RootNamespace>
+    <AssemblyName>Ex07Conflicts</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -48,8 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Employee.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Ex07Conflicts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
