--- a/Databases/Homeworks/EntityFrameworkHW/EntityFrameworkHW/Ex03CustomersWithOrdersToCanada/Ex03CustomersWithOrdersToCanada.csproj
+++ b/Databases/Homeworks/EntityFrameworkHW/EntityFrameworkHW/Ex03CustomersWithOrdersToCanada/Ex03CustomersWithOrdersToCanada.csproj
@@ -41,10 +41,11 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
