Entity Framework Performance HW solved

--- a/Databases/Homeworks/EntityFrameworkHW/EntityFrameworkHW/packages/repositories.config
+++ b/Databases/Homeworks/EntityFrameworkHW/EntityFrameworkHW/packages/repositories.config
@@ -5,4 +5,5 @@
   <repository path="..\Ex01DAOClass\packages.config" />
   <repository path="..\Ex03CustomersWithOrdersToCanada\packages.config" />
   <repository path="..\Ex07Conflicts\packages.config" />
+  <repository path="..\Ex10SuppliersIncome\packages.config" />
 </repositories>
